# beyond-os

./: Cargo.toml  justfile  x86_64-beyond.json
.cargo/: config.toml
crates/arch/: Cargo.toml
crates/arch/src/: idt.rs  interrupt_handler.rs  interrupt_handlers.rs  interrupts.rs  lib.rs  pci.rs  pic.rs
crates/console/: Cargo.toml
crates/console/src/: console.rs  console_trait.rs  lib.rs  macros.rs  serial.rs
crates/drivers/keyboard/: Cargo.toml
crates/drivers/keyboard/src/: lib.rs
crates/fs/src/: lib.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: color.rs  console.rs  font.rs  frame_buffer.rs  graphics_trait.rs  lib.rs  renderer.rs  vga_buffer.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: color.rs  font.rs  interrupts.rs  lib.rs  main.rs  virtio_blk.rs
crates/memory/: Cargo.toml
crates/memory/src/: frame.rs  heap.rs  lib.rs  paging.rs
crates/meta/src/: lib.rs
crates/os-runner/: Cargo.toml
crates/os-runner/src/: main.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  mem.rs
tools/: lldb_qemu.lldb
