[workspace]
members = [
    "./crates/kernel",
    "./crates/os-runner",
    "crates/arch",
    "crates/console",
    "crates/drivers/keyboard",
    "crates/graphics",
    "crates/shell",
    "crates/meta",
]
resolver = "3"

[workspace.dependencies]
bootloader_api = "0.11.13"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
