[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.13"
graphics = { path = "../graphics" }
keyboard = { path = "../drivers/keyboard" }
shell = { path = "../shell" }
console = { path = "../console" }
pic8259 = "0.11.0"
spin = "0.10.0"
x86_64 = "0.15.4"
