[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.13"
graphics = { path = "../graphics" }
keyboard = { path = "../drivers/keyboard" }
shell = { path = "../shell" }
console = { path = "../console" }
arch = { path = "../arch" }
x86_64 = "0.15.4"
memory = { path = "../memory" }
